# mobile-media-streaming

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: direct_video_streaming_screen.dart  iroh_streaming_screen.dart  live_stream_screen.dart  live_streaming_screen.dart  video_streaming_screen.dart
lib/services/: camera_service.dart  direct_streaming_service.dart  direct_video_streaming.dart  ffmpeg_encoding_service.dart  iroh_live_streaming_service.dart  streaming_service.dart  video_file_streaming.dart  webrtc_service.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs
rust/src/api/: av.rs  capture.rs  direct_flutter_api.rs  direct_streaming.rs  ffmpeg.rs  ffmpeg_encoder.rs  ffmpeg_flutter_api.rs  flutter_api.rs  iroh_live.rs  iroh_live_flutter_api.rs  live_flutter_api.rs  live_protocol.rs  live_streaming.rs  mod.rs  moq_flutter_api.rs  moq_protocol.rs  publish.rs  publish_broadcast.rs  streaming.rs  subscribe.rs  subscribe_broadcast.rs  webtransport.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+27 files in other folders)
