[package]
name = "rust_lib_cyberfly_streaming"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Core iroh dependencies for iroh-live based streaming
iroh = { version = "0.95.1", default-features = false }
iroh-tickets = "0.2"

# MoQ (Media over QUIC) for live streaming
moq-lite = "0.9.6"
hang = "0.6.1"

# WebTransport over iroh
web-transport-proto = "0.2.8"
web-transport-trait = "0.2.0"
iroh-quinn = "0.14"
bytes = "1"
http = "1"
url = "2"

# Async runtime
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
n0-future = "0.3.1"
n0-error = { version = "0.1.2", features = ["anyhow"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = "1.1.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
log = "0.4"
once_cell = "1"
data-encoding = "2"
parking_lot = "0.12"

# FFmpeg support for video encoding/decoding (requires FFmpeg libraries)
# Enable with: cargo build --features ffmpeg
ffmpeg-next = { version = "7.1", optional = true }

[features]
default = []
ffmpeg = ["ffmpeg-next"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
